# FakeSensor

./: .gitignore  CMakeLists.txt  FakeSensor.sln  FakeSensor.vcxproj  FakeSensor.vcxproj.filters  Process.h  README.md  autocal.ini  build.bat  dccmtr.h
.github/workflows/: cmake.yml
source/: Process.cpp  Process.h  dccmtr.cpp  dccmtr.h  dccmtrx.cpp  dccmtrx.h  parametertest.cpp  pch.h  sensortest.cpp
